tests/algorithms/transpiler/FS/graphs/frequent_pattern_graph_miner.error
exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/frequent_pattern_graph_miner.fs(187,21): error FS0039: The value or constructor 'toi' is not defined

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/frequent_pattern_graph_miner.fs(187,78): error FS0039: The value or constructor 'toi' is not defined

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/frequent_pattern_graph_miner.fs(205,29): error FS0039: The field, constructor or member 'Keys' is not defined

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/frequent_pattern_graph_miner.fs(206,36): error FS0008: This runtime coercion or type test from type
    'a    
 to 
    IDictionary<string,obj>    
involves an indeterminate type based on information prior to this program point. Runtime type tests are not allowed on some types. Further type annotations are needed.

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/frequent_pattern_graph_miner.fs(207,36): error FS0008: This runtime coercion or type test from type
    'a    
 to 
    IDictionary<string,obj>    
involves an indeterminate type based on information prior to this program point. Runtime type tests are not allowed on some types. Further type annotations are needed.

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/frequent_pattern_graph_miner.fs(208,34): error FS0001: This expression was expected to have type
    string    
but here has type
    obj    

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/frequent_pattern_graph_miner.fs(209,24): error FS0001: This expression was expected to have type
    string    
but here has type
    obj    

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/frequent_pattern_graph_miner.fs(211,24): error FS0001: This expression was expected to have type
    string    
but here has type
    obj    

/workspace/mochi/tests/algorithms/transpiler/FS/graphs/frequent_pattern_graph_miner.fs(211,35): error FS0001: This expression was expected to have type
    string    
but here has type
    obj    
